# 42sh

./: .envrc  .gitignore  Doxyfile  README.md  configure.ac
src/: 42sh.c  Makefile.am
src/ast/: Makefile.am  and_or.c  and_or.h  ast.c  ast.h  if.c  if.h  list.c  list.h  pipeline.c  pipeline.h  simple_cmd.c  simple_cmd.h  until.c  until.h  while.c  while.h
src/builtins/: Makefile.am  booleans.c  builtins.c  builtins.h  cd.c  echo.c  exit.c
src/expansion/: Makefile.am  quotes.c  quotes.h  simple_cmd_expansion.c  simple_cmd_expansion.h
src/lexer/: Makefile.am  io.c  io.h  lexer.c  lexer.h  operator.c  operator.h  token.c  token.h  word.c  word.h
src/parser/: Makefile.am  and_or_parser.c  and_or_parser.h  cmd_parser.c  cmd_parser.h  if_parser.c  if_parser.h  io.c  io.h  list_parser.c  list_parser.h  parser.c  parser.h  pipeline_parser.c  pipeline_parser.h  quotes_parser.c  quotes_parser.h  until_parser.c  until_parser.h  while_parser.c  while_parser.h
src/utils/: Makefile.am  options.c  options.h  strbuilder.c  strbuilder.h
src/visitor/: Makefile.am  and_or_visitor.c  and_or_visitor.h  if_visitor.c  if_visitor.h  list_visitor.c  list_visitor.h  pipeline_visitor.c  pipeline_visitor.h  simple_cmd_visitor.c  simple_cmd_visitor.h  until_visitor.c  until_visitor.h  visitor.c  visitor.h  while_visitor.c  while_visitor.h
tests/: Makefile.am  shell_script.py  test_step1.py  test_step3.py
tests/functional/: Makefile.am  config.py  requirements.txt  shell_script.py  test_basic.py  test_step1.py  utils.py
tests/functional/inputs/: echo_E_option.sh  echo_e_option.sh  echo_false.sh  echo_multiple_args.sh  echo_nE_options.sh  echo_n_option.sh  echo_ne_options.sh  echo_options_after_word.sh  echo_single_quoted_E_option.sh  echo_single_quoted_commentary.sh  echo_true.sh  if_echo.sh  if_echo_else.sh  if_else_simple.sh  if_invalid_syntax.sh  if_simple.sh
tests/functional/inputs/step1/: echo_multiple_args.sh  echo_nE_options.sh  echo_n_option.sh  echo_options_after_word.sh  echo_single_quoted_e_option.sh  echo_single_quoted_nE_options.sh  echo_single_quoted_n_option sh  echo_single_quoted_ne_options.sh  echo_toto.sh  if_echo.sh  if_else_simple.sh  if_simple.sh  invalid_cmd_name.sh  single_quoted_invalid_cmd_name.sh
tests/inputs/step1/: cmd_multiple.sh  commented_cmd.sh  echo_E_option.sh  echo_blanks.sh  echo_e_option.sh  echo_nE_options.sh  echo_ne_options.sh  echo_single_quoted_E_option.sh  echo_single_quoted_blanks.sh  echo_single_quoted_e_option.sh  echo_single_quoted_nE_options.sh  echo_single_quoted_ne_options.sh  echo_splitted_by_singlequotes.sh  echo_true_false.sh  if_echo_else.sh  if_elif_empty.sh  if_elif_false.sh  if_else_simple.sh  if_invalid_syntax.sh  if_with_elif_true.sh  if_without_condition.sh  if_without_fi.sh  if_without_then.sh  inline_comment.sh  not_closed_single_quoted_eol.sh  not_closed_single_quotes.sh  only_semicolon.sh  quoted_builtins.sh  simple_cmd_and_mutliple_eol.sh  single_quote_hard.sh  single_quoted_cmd.sh  single_quoted_echo.sh  single_quoted_eol.sh  single_quoted_tokens.sh  space_comments.sh  three_cmd_separated_by_eol.sh  three_cmd_separated_by_semicolon.sh  three_echo_lines.sh  two_echo.sh  two_echo_with_semicolon.sh
tests/inputs/step2/: and_or_hard.sh  cat_and_or.sh  cat_or_and.sh  coverage.sh  simple_and.sh  simple_and_or.sh  simple_negation.sh  simple_or.sh  simple_or_and.sh  simple_pipe.sh  unknown_cmd_and_or.sh  unknown_cmd_or_and.sh
tests/inputs/step3/: cd_-.sh  cd_best_test.sh  cd_best_test_2.sh  cd_no_args.sh  cd_no_good_folder.sh  cd_non_valid.sh  exit_in_the_middle_of_script.sh  exit_with_troyes.sh
tests/unit/: Makefile.am  basic_tests.c  lexer_tests  token_tests.c
tests/unit/ast/: Makefile.am  ast_tests.c  pipeline_tests.c  simple_cmd_tests.c
tests/unit/builtins/: Makefile.am
tests/unit/lexer/: Makefile.am  io_tests.c  lexer_tests.c  token_tests.c
tests/unit/parser/: Makefile.am
tests/unit/visitor/: Makefile.am
