SUBDIRS = parser lexer utils visitor ast builtins expansion

bin_PROGRAMS = 42sh

42sh_SOURCES = 42sh.c

42sh_CPPFLAGS = -I$(top_srcdir)/src

42sh_CFLAGS = -std=c99 -Werror -Wall -Wextra -Wvla -pedantic

42sh_LDADD = \
       parser/libparser.a \
       lexer/liblexer.a \
       utils/libutils.a \
       visitor/libvisitor.a \
       ast/libast.a \
       builtins/libbuiltins.a \
       expansion/libexpansion.a
